--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="option_unselected">#D5D8DC</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="text_white">@color/white</color>
+    <color name="text_default">@color/black</color>
+    <color name="dialog_background">#FFFFFF</color>
+    <color name="blue">#181AFF</color>
+    <color name="primaryHT">#8F40A4C4</color>
+    <color name="primaryDark">#358ca7</color>
+    <color name="primary">#40A4C4</color>
+    <color name="light_gray">#fff5f5f5</color>
+    <color name="gray">#858585</color>
+
+    <color name="colorSurface">#fafafa</color>
+    <color name="colorOnSurface">#212121</color>
+    <color name="colorSecondary">#bdbdbd</color>
+    <color name="colorSecondaryVariant">#efefef</color>
 </resources>
