--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_insert_data"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
 
@@ -9,11 +9,6 @@
         android:id="@+id/navigation_components"
         android:icon="@drawable/ic_channel"
         android:title="@string/components" />
-
-    <item
-        android:id="@+id/navigation_calendar"
-        android:icon="@drawable/ic_calendar"
-        android:title="@string/calendar" />
 
     <item
         android:id="@+id/navigation_profile"
