--- a/feature_login/src/main/res/values/color.xml
+++ b/feature_login/src/main/res/values/color.xml
@@ -25,4 +25,8 @@
     <color name="colorOnSurface">#212121</color>
     <color name="colorSecondary">#bdbdbd</color>
     <color name="colorSecondaryVariant">#efefef</color>
+
+    <color name="was">#40a4c4</color>
+
+    <color name="light_green">#67AD2C</color>
 </resources>
