--- a/feature_login/src/main/res/values/style.xml
+++ b/feature_login/src/main/res/values/style.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="LoginTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/black</item>
+        <item name="boxStrokeColor">@color/colorSecondary</item>
         <item name="boxStrokeWidthFocused">1dp</item>
         <item name="boxStrokeWidth">1dp</item>
         <item name="hintTextColor">@color/black</item>
@@ -12,5 +13,15 @@
         <item name="android:textColor">@color/text_white</item>
         <item name="android:backgroundTint">@color/blue</item>
         <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="LoginButtonStyle2" parent="TextAppearance.AppCompat">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/text_white</item>
+        <item name="backgroundTint">@color/light_green</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="button2" parent="TextAppearance.AppCompat">
+        <item name="backgroundTint">@color/white</item>
     </style>
 </resources>
