--- a/feature_components/src/main/res/values/dimens.xml
+++ b/feature_components/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="baseRadius">10dp</dimen>
     <dimen name="default_margin">16dp</dimen>
 
+    <dimen name="paddingXS">8dp</dimen>
+    <dimen name="paddingSM">8dp</dimen>
 </resources>
