--- a/feature_insert_data/src/main/res/layout/fragment_insert_data.xml
+++ b/feature_insert_data/src/main/res/layout/fragment_insert_data.xml
@@ -8,20 +8,31 @@
     tools:context=".presentation.InsertDataFragment"
     android:id="@+id/insertFragmentContainer">
 
-    <AutoCompleteTextView
-        android:id="@+id/categoryAutoTv"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/categoryAutoTvLayout"
+        style="@style/TextInputLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:completionHint="@string/category_prompt"
-        android:completionThreshold="1"
-        android:gravity="center"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.05"
+        android:hint="@string/category_prompt"
+        app:hintEnabled="true">
+
+        <AutoCompleteTextView
+            android:id="@+id/categoryAutoTv"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:completionThreshold="1"
+            android:gravity="center"
+            android:textSize="16sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <LinearLayout
         android:id="@+id/brandAndModelChoiceBar"
@@ -34,28 +45,50 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryAutoTv"
+        app:layout_constraintTop_toBottomOf="@+id/categoryAutoTvLayout"
         app:layout_constraintVertical_bias="0.0">
 
-        <AutoCompleteTextView
-            android:id="@+id/brandAutoTv"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/brandAutoTvLayout"
+            style="@style/TextInputLayoutStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:completionHint="@string/brand_prompt"
-            android:completionThreshold="1"
-            android:gravity="center" />
+            android:hint="@string/brand_prompt"
+            app:hintEnabled="true">
 
-        <AutoCompleteTextView
-            android:id="@+id/modelAutoTv"
+            <AutoCompleteTextView
+                android:id="@+id/brandAutoTv"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:completionThreshold="1"
+                android:gravity="center"
+                android:textSize="16sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/modelAutoTvLayout"
+            style="@style/TextInputLayoutStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
-            android:completionHint="@string/model_prompt"
-            android:completionThreshold="1"
-            android:gravity="center" />
+            android:hint="@string/model_prompt"
+            app:hintEnabled="true">
+
+            <AutoCompleteTextView
+                android:id="@+id/modelAutoTv"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:completionThreshold="1"
+                android:gravity="center"
+                android:textSize="16sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
     </LinearLayout>
 
 
@@ -99,7 +132,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:hint="@string/count"
+            app:hintEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/countOfComponentsIet"
@@ -113,31 +148,16 @@
 
     </LinearLayout>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/count"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/countAndAccepterChoiceBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.894"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-
     <LinearLayout
         android:id="@+id/dateLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="370dp"
         android:weightSum="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.567">
+        app:layout_constraintTop_toBottomOf="@id/countAndAccepterChoiceBar">
 
         <TextView
             android:id="@+id/dateOfSendHintTv"
@@ -164,7 +184,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/oval_button"
         android:gravity="center"
         android:text="@string/add_in_base"
@@ -174,7 +194,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateLinearLayout"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.928" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
