--- a/feature_components/src/main/res/values/styles.xml
+++ b/feature_components/src/main/res/values/styles.xml
@@ -11,4 +11,13 @@
         <item name="android:textColor">@color/gray</item>
     </style>
 
+    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="android:textSize">15sp</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="strokeColor">@color/gray</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="rippleColor">#DFE4D6</item>
+
+        <item name="android:textColor">@color/colorOnSurface</item>
+    </style>
 </resources>
