--- a/feature_login/src/main/res/values/ids.xml
+++ b/feature_login/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="auth_to_components" type="id" />
+    <item name="registration_to_components" type="id" />
+    <item name="action_loginFragment_to_registrationFragment" type="id" />
 </resources>
