--- a/feature_login/src/main/res/layout/fragment_login.xml
+++ b/feature_login/src/main/res/layout/fragment_login.xml
@@ -19,11 +19,10 @@
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.218"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_login_edit_text"
             android:layout_width="match_parent"
@@ -41,10 +40,10 @@
         android:hint="@string/password"
         app:hintEnabled="true"
         app:layout_constraintHorizontal_bias="0.218"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_login_text_layout">
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_login_text_layout"
+        app:layout_constraintBottom_toTopOf="@id/login_button">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_password_edit_text"
             android:layout_width="match_parent"
@@ -52,20 +51,19 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <Button
         android:id="@+id/login_button"
         style="@style/LoginButtonStyle2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/button_login_horizontal_margin"
+        android:layout_marginEnd="@dimen/button_login_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@drawable/oval_button"
         android:text="@string/login"
         app:layout_constraintHorizontal_bias="0.218"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password_text_layout" />
 
     <TextView
@@ -76,8 +74,8 @@
         android:text="@string/restore_password"
         android:textColor="@color/gray"
         android:textSize="@dimen/reg_link_text_size"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     <TextView
@@ -89,8 +87,8 @@
         android:textColor="@color/gray"
         android:textSize="@dimen/reg_link_text_size"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reteive_password" />
 
     <TextView
@@ -103,6 +101,6 @@
         android:textSize="@dimen/reg_link_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
