--- a/feature_login/src/main/res/values/style.xml
+++ b/feature_login/src/main/res/values/style.xml
@@ -8,14 +8,7 @@
         <item name="hintTextColor">@color/black</item>
     </style>
 
-    <style name="LoginButtonStyle">
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/text_white</item>
-        <item name="android:backgroundTint">@color/blue</item>
-        <item name="android:textSize">15sp</item>
-    </style>
-
-    <style name="LoginButtonStyle2" parent="TextAppearance.AppCompat">
+    <style name="LoginButtonStyle" parent="TextAppearance.AppCompat">
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/text_white</item>
         <item name="backgroundTint">@color/light_green</item>
