--- a/feature_components/src/main/res/values/styles.xml
+++ b/feature_components/src/main/res/values/styles.xml
@@ -12,11 +12,11 @@
     </style>
 
     <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">@dimen/outlinedButtonTextSize</item>
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="strokeColor">@color/gray</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="rippleColor">#DFE4D6</item>
+        <item name="strokeWidth">@dimen/outlinedButtonStrokeWidth</item>
+        <item name="rippleColor">@color/toggle_group_color</item>
 
         <item name="android:textColor">@color/colorOnSurface</item>
     </style>
